docs/sphinx/_downloads/f8bc3b359649e1511b70552f7d3ecf4f/codata.h

typedef struct codata_constant_type{
    char name[65];
    double value;
    double uncertainty;
    char unit[33];
}cct;
ADD_IMPORT extern const cct ATOMIC_MASS_UNIT_INVERSE_METER_RELATIONSHIP_2018;
ADD_IMPORT extern const cct ATOMIC_MASS_UNIT_JOULE_RELATIONSHIP_2018;
ADD_IMPORT extern const cct ATOMIC_MASS_UNIT_KELVIN_RELATIONSHIP_2018;
ADD_IMPORT extern const cct ATOMIC_MASS_UNIT_KILOGRAM_RELATIONSHIP_2018;
ADD_IMPORT extern const cct ATOMIC_UNIT_OF_1ST_HYPERPOLARIZABILITY_2018;
ADD_IMPORT extern const cct ATOMIC_UNIT_OF_2ND_HYPERPOLARIZABILITY_2018;
ADD_IMPORT extern const cct ATOMIC_UNIT_OF_ACTION_2018;
ADD_IMPORT extern const cct ATOMIC_UNIT_OF_CHARGE_2018;
ADD_IMPORT extern const cct ATOMIC_UNIT_OF_CHARGE_DENSITY_2018;
ADD_IMPORT extern const cct ATOMIC_UNIT_OF_CURRENT_2018;
ADD_IMPORT extern const cct ATOMIC_UNIT_OF_ELECTRIC_DIPOLE_MOM_2018;
ADD_IMPORT extern const cct ATOMIC_UNIT_OF_ELECTRIC_FIELD_2018;
ADD_IMPORT extern const cct ATOMIC_UNIT_OF_ELECTRIC_FIELD_GRADIENT_2018;
ADD_IMPORT extern const cct ATOMIC_UNIT_OF_ELECTRIC_POLARIZABILITY_2018;
ADD_IMPORT extern const cct ATOMIC_UNIT_OF_ELECTRIC_POTENTIAL_2018;